@@ -1,3 +1,9 @@
+2007-11-12  Aaron Bockover  <abock@gnome.org>
+
+	* src/Core/Banshee.ThickClient/Banshee.Gui.Widgets/TrackInfoDisplay.cs:
+	First pass at fixing a missing_pixbuf->not missing transition glitch;
+	center the text on the middle of the cover art on the y-axis
+
 2007-11-11  Aaron Bockover  <abock@gnome.org>
 
 	* Nereid/Nereid/PlayerInterface.cs: Add the AccelGroup from 
